2006-03-14 [wwp]	2.0.0cvs137

	* src/main.c
		code style normalization (curly braces, indentation).

2006-03-14 [wwp]	2.0.0cvs137

	* src/main.c
		code style (braces, indentation)

2006-03-12 [paul]	2.0.0cvs136

	* src/prefs_common.c
		trans_hdr defaults to FALSE to be RFC-savvy
	* src/prefs_summaries.c
		add a tooltip to the trans_hdr option
		

2006-03-12 [paul]	2.0.0cvs135

	* src/prefs_matcher.c
		give a little more width to the combos
	* src/prefs_display_header.c
	* src/textview.c
		translate headers if prefs_common.trans_hdr
		is TRUE

	Patches by Pawel Pekala

2006-03-12 [paul]	2.0.0cvs134

	* src/plugins/clamav/clamav_plugin.c
	* src/plugins/dillo_viewer/dillo_viewer.c
	* src/plugins/pgpcore/plugin.c
	* src/plugins/pgpinline/plugin.c
	* src/plugins/pgpmime/plugin.c
	* src/plugins/spamassassin/spamassassin.c
		update/add to descriptions
	* src/plugins/spamassassin/spamassassin_gtk.c
		fixes to the english, remove superfluous
		tooltips, clean up a little

2006-03-12 [paul]	2.0.0cvs133

	* src/compose.c
		fix Bug 924, 'Account combo box shows up wrong 
		if & is in account name'

2006-03-11 [colin]	2.0.0cvs132

	* src/summaryview.c
		Revert 2.0.0cvs84 which reverted 1.9.6cvs23 which
		messed up shift-selection because is slows down
		moving around summaryview. thanks -users

2006-03-10 [colin]	2.0.0cvs131

	* src/plugins/spamassassin/spamassassin_gtk.c
		Put back Paul's engrish fixes

2006-03-10 [colin]	2.0.0cvs130

	* src/plugins/spamassassin/spamassassin.c
	* src/plugins/spamassassin/spamassassin.h
	* src/plugins/spamassassin/spamassassin_gtk.c
		Cleanup SA prefs page (more)
		Patch by Fabien Vantard

2006-03-10 [paul]	2.0.0cvs129

	* src/prefs_msg_colors.c
	* src/prefs_spelling.c
		widget sensitivity

2006-03-09 [mones]	2.0.0cvs128

	* po/es.po
		Update for next RC

2006-03-09 [wwp]	2.0.0cvs127

	* configure.ac
		revert accidental commit (requirement for libetpan 0.43), this time
		not in HEAD.

2006-03-09 [wwp]	2.0.0cvs125

	* configure.ac