@@ -1323,3 +1323,4 @@
 ( cvs diff -u -r 1.204.2.79 -r 1.204.2.80 src/prefs_common.c;  cvs diff -u -r 1.1.2.21 -r 1.1.2.22 src/prefs_summaries.c;  ) > 2.0.0cvs136.patchset
 ( cvs diff -u -r 1.115.2.76 -r 1.115.2.77 src/main.c;  ) > 2.0.0cvs137.patchset
 ( cvs diff -u -r 1.115.2.76 -r 1.115.2.77 src/main.c;  ) > 2.0.0cvs137.patchset
+( cvs diff -u -r 1.5.2.20 -r 1.5.2.21 src/prefs_spelling.c;  ) > 2.0.0cvs138.patchset
