@@ -1,3 +1,8 @@
+2006-03-14 [colin]	2.0.0cvs138
+
+	* src/prefs_spelling.c
+		Cleanups - Fabien Vantard
+
 2006-03-14 [wwp]	2.0.0cvs137
 
 	* src/main.c
